# Sandrone-beta1

./: .gitignore  AGENTS.md  README.md  harness设计.md  开发日志.md  待处理问题.md
agent-alpha/: .gitignore  broswer规则.MD  pyproject.toml  setup-agent-alpha.ps1  start-agent-alpha.ps1  sync-chrome-profile5-to-alpha.ps1  路径管理说明.md
agent-alpha/agent/: __init__.py
agent-alpha/agent/api/: __init__.py  llm.py  llm_profiles.py
agent-alpha/agent/cli/: __init__.py  main.py
agent-alpha/agent/core/: __init__.py  agent_loop.py  agent_runtime.py  command_path_extractor.py  config.py  context_manager.py  message_history.py  path_policy.py  permission_manager.py  prompt_docs_loader.py  role_config.py  runtime_paths.py  runtime_types.py  sandbox_guard.py  sandbox_types.py  session_events.py  session_paths.py  session_store.py  skill_loader.py  system_prompt_builder.py  tool_loader.py
agent-alpha/agent/runtime/: __init__.py
agent-alpha/agent/tools/: bash_tool.py  browser_manager.py  browser_tool.py  process_utils.py
agent-alpha/config/: llm_profiles.json
agent-alpha/mcp-servers/: registry.json
agent-alpha/mcp-servers/open-websearch/: auto-config.json  mcp.config.json
agent-alpha/session-log/events/: 07a173.jsonl  0932a6.jsonl  0a5d4d.jsonl  0d3fe5.jsonl  100881.jsonl  1e2981.jsonl  27a882.jsonl  289838.jsonl  (+32 more)
agent-alpha/tests/: conftest.py
agent-alpha/workspace/: 20260612T205105--plain-attention-is-all-you-need.md  20260612T221917--plain-jepa-lecun-2022.md  20260613T150732--plain-ijepa-assran-2023.md  V-JEPA2-白话解读.md  subagent工具详细设计.md  实时事件日志设计.md  鸣潮玩家逆天行为-知乎探索报告.md
(+556 files in other folders)
